--- a/locales/bul_BG.yml
+++ b/locales/bul_BG.yml
@@ -180,6 +180,7 @@ _theme:
     mention: Споменаване
     renote: Подсили
   color: Цвят
+  explore: Разгледай темите
 _pages:
   script:
     blocks:
@@ -221,8 +222,8 @@ _mfm:
 _messaging:
   groups: Групи
 apps: Приложения
-introFirefish: Добре дошли! Calckey е децентрализирана социална медийна платформа с
-  отворен код, която е безплатна завинаги! 🚀
+introFirefish: Добре дошли! Calckey е децентрализирана социална медийна платформа
+  с отворен код, която е безплатна завинаги! 🚀
 monthAndDay: '{day}/{month}'
 search: Търсене
 searchPlaceholder: Търсене в Calckey
@@ -419,3 +420,5 @@ _permissions:
   "write:favorites": Редактирай списъка си с отметки
 _visibility:
   followers: Последователи
+explore: Разглеждане
+theme: Теми
