--- a/locales/de-DE.yml
+++ b/locales/de-DE.yml
@@ -97,7 +97,7 @@ enterListName: "Gib einen Namen für die Liste ein"
 privacy: "Privatsphäre"
 makeFollowManuallyApprove: "Folgeanfragen bedürfen der Genehmigung"
 defaultNoteVisibility: "Standard-Sichtbarkeit"
-follow: "Folge ich"
+follow: "Folgen"
 followRequest: "Follow anfragen"
 followRequests: "Follow-Anfragen"
 unfollow: "Nicht mehr folgen"
@@ -1106,6 +1106,7 @@ _aboutFirefish:
     um bei der Deckung der Betriebskosten zu helfen.
   sponsors: Firefish-Sponsoren
   donateHost: Spende an {host}
+  misskeyContributors: Misskey-Mitwirkende
 _nsfw:
   respect: "Mit NSFW gekennzeichnete Mediendateien verbergen"
   ignore: "Mit NSFW gekennzeichnete Mediendateien nicht verbergen"
@@ -2201,3 +2202,5 @@ delete2faConfirm: Passkeys werden unwiderruflich von diesem Account gelöscht. F
 deletePasskeysConfirm: Alle Passkeys und Security-Keys werden unwiderruflich von diesem
   Account gelöscht. Fortfahren?
 inputNotMatch: Eingabe stimmt nicht überein
+addRe: Ein "re:" am Anfang des Kommentars hinzufügen, um einem Beitrag mit einer Inhaltswarnung
+  zu antworten
