--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1146,6 +1146,7 @@ languageForTranslation: "Language used for post translation"
 addRe: "Add \"re:\" at the beginning of comment in reply to a post with a content warning"
 showBigPostButton: "Show a bigger post button in the posting form"
 confirm: "Confirm"
+emphasizeFollowed: "Highlight the \"Follows you\" sign on your follower info"
 
 _sensitiveMediaDetection:
   description: "Reduces the effort of server moderation through automatically recognizing
