--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -2133,3 +2133,10 @@ _feeds:
   rss: "RSS"
   atom: "Atom"
   jsonFeed: "JSON feed"
+emojiModPerm: "Custom emoji management"
+emojiModPermDescription: "Add: Allow this user to add new custom emojis and to set tag/category/license to newly added custom emojis.\nAdd and Edit: \"Add\" Permission + Allow this user to edit the name/category/tag/license of the existing custom emojis.\nAllow All: \"Add and Edit\" Permission + Allow this user to delete existing custom emojis."
+_emojiModPerm:
+  none: "Deny All"
+  add: "Add"
+  mod: "Add and Edit"
+  full: "Allow All"
