--- a/locales/fr-FR.yml
+++ b/locales/fr-FR.yml
@@ -71,7 +71,7 @@ driveFileDeleteConfirm: "Êtes-vous sûr·e de vouloir supprimer le fichier \"{n
   \ ? Il sera retiré de toutes les publications qui le contiennent comme pièce-jointe."
 unfollowConfirm: "Désirez-vous vous désabonner de {name} ?"
 exportRequested: "Vous avez demandé une exportation. L’opération pourrait prendre
-  un peu de temps. Une terminée, le fichier résultant sera ajouté au Drive."
+  un peu de temps. Une fois terminée, le fichier résultant sera ajouté au Drive."
 importRequested: "Vous avez initié un import. Cela pourrait prendre un peu de temps."
 lists: "Listes"
 noLists: "Vous n’avez aucune liste"
