fix: update locale

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1141,7 +1141,7 @@ deletePasskeys: "Delete passkeys"
 delete2faConfirm: "This will irreversibly delete 2FA on this account. Proceed?"
 deletePasskeysConfirm: "This will irreversibly delete all passkeys and security keys on this account. Proceed?"
 inputNotMatch: "Input does not match"
-detectPostLanguage: "Automatically detect the language and show a translate button for non-English posts"
+detectPostLanguage: "Automatically detect the language and show a translate button for posts in foreign languages"
 languageForTranslation: "Language used for post translation"
 addRe: "Add \"re:\" at the beginning of comment in reply to a post with a content warning"
 showBigPostButton: "Show a bigger post button in the posting form"
